  plugin for FireBug.
- New: Add a confirmation on dangerous admin purge feature.
- New: Add navigation on donation sheets.
- New: Added estimated value for stocks.
- New: Added module Gravatar to found photo of users or members
       from their email on gravatar.com.
- New: Include Dolibarr version in suggested dump filename.
- New: Enhancement in project module.
- Fix: Error Call to a member function trans when refusing a supplier order.
- Fix: Fix payment conditions on commercial proposals.
- Fix: Nb of orders to process was wrong.
- Fix: Customer code was not correct on PDF it if contains special 
       characters.
- Fix: Can update price even with "NPR" VAT rates.
- Fix: When product type is missing, description is not lost when adding 
       new product lines.
- Fix: CC and BCC in emails was not used if using SMTPS handler.
- Fix: Last character was lost when text end with n or r.

For translators:
- Update some language files.

For developers:
- An external module can force the third party code to be required whatever
  is the rule of third party code module.
- Update fckeditor to 2.6.4.
- Removed some deprecated code and files.
- Creation of directory in module descriptor is simpler.
- Can use an alternate document_root directory to develop with 
  sources on two repositories.
- Removed useless code of old commercial module.
- Updated wiki documentation.
- Better W3C standard.
- Can add data provided with a module.
- Can fix some corruptions in database by calling the update page with action=repair


***** Changelog for 2.6 compared to 2.5 *****

For users:
- New: Add filter on status in emailing selector for Dolibarr users.
- New: Can add bookmarks on all pages.
- New: Enhance bank transactions reporting.
- New: When creating a contact from a third party, informations from third party card
  are automatically suggested.
- New: Sort list of languages in combo box.
- New: EMails links are show with function dol_print_email