@@ -66,6 +66,7 @@ CloneEMailing=Clone Emailing
 ConfirmCloneEMailing=Are you sure you want to clone this emailing ?
 CloneContent=Clone message
 CloneReceivers=Cloner recipients
+DateLastSend=Date of last sending
 
 # Libelle des modules de liste de destinataires mailing
 MailingModuleDescContactCompanies=Contacts of all third parties (customer, prospect, supplier, ...)
