@@ -50,7 +50,7 @@ ConfirmValidMailing=Confirmez-vous la validation du mailing ?
 ConfirmResetMailing=Attention, en réinitialisation le mailing <b>%s</b>, vous autorisez son émission en masse une nouvelle fois. Est-ce bien ce que vous voulez faire ?
 ConfirmDeleteMailing=Confirmez-vous la suppression du mailing ?
 NbOfRecipients=Nombre de destinataires
-NbOfUniqueEMails=Nb d'e-mails uniques
+NbOfUniqueEMails=Nb d'emails uniques
 NbOfEMails=Nbre d'EMails
 TotalNbOfDistinctRecipients=Nombre de destinataires uniques
 NoTargetYet=Aucun destinataire défini (Aller sur l'onglet Destinataires)
@@ -66,6 +66,7 @@ CloneEMailing=Cloner Emailing
 ConfirmCloneEMailing=Etes-vous sur de vouloir cloner cet emailing ?
 CloneContent=Cloner message
 CloneReceivers=Cloner destinataires
+DateLastSend=Date du dernier envoi
 
 # Libelle des modules de liste de destinataires mailing
 MailingModuleDescContactCompanies=Contacts des tiers (prospects, clients, fournisseurs...)
@@ -91,7 +92,7 @@ MailingNeedCommand=Pour des raisons de sécurité, il est recommandé de faire l
 MailingNeedCommand2=Vous pouvez toutefois quand même les envoyer en ligne en ajoutant le parametre MAILING_LIMIT_SENDBYWEB avec la valeur du nombre max de mails envoyés par session d'envoi.
 ConfirmSendingEmailing=Confirmez-vous l'envoi de l'emailing ?<br>L'envoi en ligne des emailings sont limités par sécurité à <b>%s</b> destinataires par session d'envoi.
 TargetsReset=Vider liste
-ToClearAllRecipientsClickHere=Pour vider la liste des destinataires de ce mailing, cliquer le bouton
+ToClearAllRecipientsClickHere=Pour vider la liste des destinataires de cet emailing, cliquer le bouton
 ToAddRecipientsChooseHere=Pour ajouter des destinataires, choisir dans les listes ci-dessous
 NbOfEMailingsReceived=EMailings de masse reçus
 IdRecord=ID enregistrement
