@@ -29,6 +29,7 @@ For users:
        from their email on gravatar.com.
 - New: Include Dolibarr version in suggested dump filename.
 - New: Enhancement in project module.
+- New: Add log tab on emailing module.
 - Fix: Error Call to a member function trans when refusing a supplier order.
 - Fix: Fix payment conditions on commercial proposals.
 - Fix: Nb of orders to process was wrong.
